Fixed error due to merge conflict

--- a/scripts/config.json
+++ b/scripts/config.json
@@ -5,7 +5,7 @@
     },
     "id": {
         "uuid": "pico-mark-4",
-        "busNo": "H"
+        "busNo": "D"
     },
     "hardware": {
         "gps": {
