--- a/scripts/.vscode/settings.json
+++ b/scripts/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
   "python.linting.enabled": true,
-  "python.analysis.typeshedPaths": [".vscode\\Pico-W-Stub"],
+  "python.analysis.typeshedPaths": [
+    ".vscode\\Pico-W-Stub"
+  ],
   "python.languageServer": "Pylance",
-  "python.analysis.typeCheckingMode": "basic",
-  "python.analysis.extraPaths": [".vscode\\Pico-W-Stub\\stubs"],
+  "python.analysis.typeCheckingMode": "off",
+  "python.analysis.extraPaths": [
+    ".vscode\\Pico-W-Stub\\stubs"
+  ],
   "picowgo.syncFolder": "",
   "picowgo.openOnStart": false
 }
