--- a/scripts/.vscode/settings.json
+++ b/scripts/.vscode/settings.json
@@ -1,13 +1,13 @@
 {
-  "python.linting.enabled": true,
-  "python.analysis.typeshedPaths": [
-    ".vscode\\Pico-W-Stub"
-  ],
-  "python.languageServer": "Pylance",
-  "python.analysis.typeCheckingMode": "off",
-  "python.analysis.extraPaths": [
-    ".vscode\\Pico-W-Stub\\stubs"
-  ],
-  "picowgo.syncFolder": "",
-  "picowgo.openOnStart": false
+    "python.linting.enabled": true,
+    "python.analysis.typeshedPaths": [
+        ".vscode\\Pico-W-Stub"
+    ],
+    "python.languageServer": "Pylance",
+    "python.analysis.typeCheckingMode": "off",
+    "python.analysis.extraPaths": [
+        ".vscode\\Pico-W-Stub\\stubs"
+    ],
+    "micropico.syncFolder": "",
+    "micropico.openOnStart": false
 }
